force-app/main/default/objects/InsurancePolicy/fields/Date_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Renewed__c</fullName>
    <description>SFP-12591 Date policy renewed</description>
    <inlineHelpText>The date policy will be renewed</inlineHelpText>
    <label>Date Renewed</label>
    <type>Date</type>
</CustomField>