force-app/main/default/objects/InsurancePolicy/fields/Grand_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Product__c</fullName>
    <description>SFP-12591 Used to group Insurance products</description>
    <inlineHelpText>Select the appropriate product to be linked with the Policy</inlineHelpText>
    <label>Grand Parent Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident &amp; Health</fullName>
            </value>
            <value>
                <fullName>Credit Life</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Insurance of the Person</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Motor (lending)</fullName>
            </value>
            <value>
                <fullName>Motor (non lending linked)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property (lending)</fullName>
            </value>
            <value>
                <fullName>Property (non lending linked)</fullName>
            </value>
            <value>
                <fullName>SME Group Life</fullName>
            </value>
            <value>
                <fullName>SME Life insurance</fullName>
            </value>
            <value>
                <fullName>SME Short term</fullName>
            </value>
            <value>
                <fullName>Surety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>