force-app/main/default/objects/InsurancePolicy/fields/Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date__c</fullName>
    <description>SFP-12591 - Cover start date</description>
    <inlineHelpText>The date on which the cover comes into effect</inlineHelpText>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>