force-app/main/default/objects/InsurancePolicy/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-12591 - Name of insurer SBG is collaborating with.</description>
    <inlineHelpText>Select the name of the insurance company that will underwrite the risk.</inlineHelpText>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Insurer)</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>