force-app/main/default/objects/InsurancePolicy/fields/NeedSyncWithProduct__c.field-meta.xml
<CustomField>
    <fullName>NeedSyncWithProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-12591 The field uses in sync automation with SB_Product__c object.</description>
    <label>NeedSyncWithProduct</label>
    <type>Checkbox</type>
</CustomField>