force-app/main/default/objects/InsurancePolicy/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <description>SFP-12591 Used to group Insurance products</description>
    <inlineHelpText>Select the appropriate product to be linked with the Policy</inlineHelpText>
    <label>Parent Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Guarantee</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Motor vehicles and fleet</fullName>
            </value>
            <value>
                <fullName>Multiperil or stand alone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>VAF Other Assets</fullName>
            </value>
            <value>
                <fullName>VAF Motor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>