force-app/main/default/objects/InsurancePolicy/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <description>SFP-12591  Date policy payment is due</description>
    <inlineHelpText>Date policy payment is due.</inlineHelpText>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>