force-app/main/default/objects/InsurancePolicy/fields/Policy_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Reference_Number__c</fullName>
    <description>SFP-12591 - Auto-generated</description>
    <displayFormat>PR/{00000000}</displayFormat>
    <inlineHelpText>Auto-generated number to create a unique number for each policy record.</inlineHelpText>
    <label>Policy Reference Number</label>
    <type>AutoNumber</type>
</CustomField>