force-app/main/default/objects/InsurancePolicy/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>SFP-12591 Used to group Insurance products.</description>
    <inlineHelpText>Select the appropriate product to be linked with the Policy</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accidental Damage</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Advanced Loss of Profits / Delay in start up</fullName>
            </value>
            <value>
                <fullName>Advertisers Liability</fullName>
            </value>
            <value>
                <fullName>Agricultural equipment and implements</fullName>
            </value>
            <value>
                <fullName>Airstrip / Helipad Liability</fullName>
            </value>
            <value>
                <fullName>Art &amp; Specie</fullName>
            </value>
            <value>
                <fullName>Assets All Risks incl BI</fullName>
            </value>
            <value>
                <fullName>Aviation hull</fullName>
            </value>
            <value>
                <fullName>Aviation Liability</fullName>
            </value>
            <value>
                <fullName>Bailees Liability</fullName>
            </value>
            <value>
                <fullName>Bankers Blanket Bond</fullName>
            </value>
            <value>
                <fullName>Bloodstock</fullName>
            </value>
            <value>
                <fullName>BLP</fullName>
            </value>
            <value>
                <fullName>Bondsure</fullName>
            </value>
            <value>
                <fullName>Broadform Liability</fullName>
            </value>
            <value>
                <fullName>Buildings Combined</fullName>
            </value>
            <value>
                <fullName>Business All Risks</fullName>
            </value>
            <value>
                <fullName>Business Interruption</fullName>
            </value>
            <value>
                <fullName>Business multiperil (Packaged solutions - SME)</fullName>
            </value>
            <value>
                <fullName>BVLP</fullName>
            </value>
            <value>
                <fullName>Carriers Liability</fullName>
            </value>
            <value>
                <fullName>Cash in Transit</fullName>
            </value>
            <value>
                <fullName>Charterers Liability</fullName>
            </value>
            <value>
                <fullName>Commercial Crime</fullName>
            </value>
            <value>
                <fullName>Commercial - Financed Assets stand-alone cover</fullName>
            </value>
            <value>
                <fullName>Confiscation, Expropriation, Nationaliation, Deprivation (CEND)</fullName>
            </value>
            <value>
                <fullName>Construction Guarantee</fullName>
            </value>
            <value>
                <fullName>Construction Liability</fullName>
            </value>
            <value>
                <fullName>Container Lability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>