force-app/main/default/objects/InsurancePolicy/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>SFP-12591 Date when the cover has to be renewed if the opportunity is a renewal</description>
    <inlineHelpText>Enter the date cover will be renewed.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>