force-app/main/default/objects/InsurancePolicy/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>SFP-12591 Date when policy sale came into effect.</description>
    <inlineHelpText>Date when the policy was sold.</inlineHelpText>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>