force-app/main/default/objects/InsurancePolicy/fields/SB_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>SB_Policy_Number__c</fullName>
    <description>SFP-12591  - Internal Policy number</description>
    <inlineHelpText>Standard Bank internal policy number</inlineHelpText>
    <label>SB Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>