force-app/main/default/objects/InsurancePolicy/validationRules/Keeping_original_input_for_Opp_reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Keeping_original_input_for_Opp_reference</fullName>
    <active>true</active>
    <description>SFP-10316 Insurance Opportunity Reference can not be changed to blank if it was populated and vice versa.</description>
    <errorConditionFormula>AND(
 NOT( ISNEW() ),
 OR(
  AND(
   NOT(ISBLANK( PRIORVALUE( SB_Product__c ) )),
   ISBLANK( SB_Product__c )
  ),
  AND(
   ISBLANK( PRIORVALUE( SB_Product__c ) ),
   NOT( ISBLANK( SB_Product__c ) )
  )
 )
)</errorConditionFormula>
    <errorDisplayField>SB_Product__c</errorDisplayField>
    <errorMessage>Insurance Opportunity Reference can not be changed to blank if it was populated and vice versa.</errorMessage>
</ValidationRule>