force-app/main/default/objects/InsurancePolicy/validationRules/Required_Product_for_Fresh_Policy.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Product_for_Fresh_Policy</fullName>
    <active>true</active>
    <description>SFP-10316 If Policy is created not from Opportunity the Product Type, Parent Product, Grand Parent product fields are mandatory.</description>
    <errorConditionFormula>AND(
  ISBLANK( SB_Product__c ),
  OR(
    ISPICKVAL( Product_Type__c, &apos;&apos; ),
    ISPICKVAL( Parent_Product__c, &apos;&apos; ),
    ISPICKVAL( Grand_Parent_Product__c, &apos;&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Please fill in Product Type, Parent Product, Grand Parent Product fields.</errorMessage>
</ValidationRule>